[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "sng_dbscan"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "numpy>=1.24.4",
]
[tool.maturin]
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "ipython>=8.12.3",
    "scikit-learn>=1.3.2",
]
